# zoom_sdk

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  pyproject.toml
sample_program/: deepgram_transcriber.py  meeting_bot.py  sample.py
sample_program/input_audio/: test_audio_16778240.pcm
scripts/: build.sh
src/: auth_service_event_callbacks.cpp  meeting_audio_ctrl_event_callbacks.cpp  meeting_chat_event_callbacks.cpp  meeting_participants_ctrl_event_callbacks.cpp  meeting_recording_ctrl_event_callbacks.cpp  meeting_reminder_event_callbacks.cpp  meeting_service_event_callbacks.cpp  meeting_share_ctrl_event_callbacks.cpp  module.cpp  utilities.cpp  utilities.h  zoom_sdk_audio_raw_data_delegate_callbacks.cpp  zoom_sdk_renderer_delegate_callbacks.cpp  zoom_sdk_video_source_callbacks.cpp  zoom_sdk_virtual_audio_mic_event_callbacks.cpp
src/binding/: auth_service_interface_binding.cpp  meeting_audio_interface_binding.cpp  meeting_chat_interface_binding.cpp  meeting_participants_ctrl_interface_binding.cpp  meeting_recording_interface_binding.cpp  meeting_reminder_ctrl_interface_binding.cpp  meeting_service_interface_binding.cpp  meeting_sharing_interface_binding.cpp  meeting_video_interface_binding.cpp  rawdata_audio_helper_interface_binding.cpp  rawdata_renderer_interface_binding.cpp  rawdata_video_source_helper_interface_binding.cpp  setting_service_interface_binding.cpp  zoom_rawdata_api_binding.cpp  zoom_sdk_binding.cpp  zoom_sdk_def_binding.cpp  zoom_sdk_raw_data_def_interface_binding.cpp
src/zoom_meeting_sdk/: __init__.py
test_scripts/: binding_coverage.py  test.py  test_join_meeting.py
